# LiteSimulator

./: .gitignore  CMakeLists.txt
Examples/: main.cpp
data/: cloud1.csv
include/: auxiliary.h  simulator.h
src/: auxiliary.cpp  simulator.cpp
utils/: TextureShader.h
